hphp/hack/test/typecheck/suspend_in_finally.php.exp
File "suspend_in_finally.php", line 9, characters 19-42:
suspend is not allowed inside finally blocks. (NastCheck[3039])
